--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js"></script>
 <script>
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-    databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_PROJECT_ID.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+  apiKey: "AIzaSyCVzAitage74Qot2l8gGDNaEDw18px1ctg",
+  authDomain: "centurionbattles.firebaseapp.com",
+  databaseURL: "https://centurionbattles-default-rtdb.firebaseio.com",
+  projectId: "centurionbattles",
+  storageBucket: "centurionbattles.firebasestorage.app",
+  messagingSenderId: "89989561372",
+  appId: "1:89989561372:web:10134ca86f5088186673d9",
+  measurementId: "G-ZKWERS3TXH"
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 </script>
