--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <h1>Centurion Firebase Chess</h1>
   <div id="turnDisplay">Turn: </div>
   <div id="board"></div>
-  <script src="firebase-config.js"></script>
-<script src="move-sync.js"></script>
-<script src="move-push.js"></script>
-<script src="board-setup.js"></script>
-<script src="render.js"></script>
-<script src="interaction.js"></script>
-<script src="game-loop.js"></script>
+  
+
+
+
+
+
+
+<script type="module" src="game-loop.js"></script>
 </body>
 </html>
