--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
   <h1>Centurion Firebase Chess</h1>
   <div id="turnDisplay">Turn: </div>
   <div id="board"></div>
-  
-
-
-
-
-
-
+<div id="turnDisplay"></div>
+<div id="timerDisplay"></div>
+<div id="promotionModal" style="display:none;">
+  <div id="promotionOptions"></div>
+</div>
+<div id="scoreHistory"><table><tbody></tbody></table></div>
+<div id="blackPoints"></div>
+<div id="whitePoints"></div>
+<div id="totalBlackScore"></div>
+<div id="totalWhiteScore"></div>
+<div id="roundNum"></div>
 <script type="module" src="game-loop.js"></script>
 </body>
 </html>
